<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:scaleType="fitXY"
        android:src="@drawable/login_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:onClick="setIp"
        android:layout_margin="@dimen/dp_5"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_black_24dp"/>
    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_16">

                <ImageView
                    android:adjustViewBounds="true"
                    android:id="@+id/logo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/york"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/dp_16"
                    android:id="@+id/userid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userid"
                    app:layout_constraintTop_toBottomOf="@+id/logo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/userid"
                    app:passwordToggleEnabled="true"
                    tools:layout_editor_absoluteX="159dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button

                    android:id="@+id/signin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/loginbtn"
                    android:onClick="SignIn"
                    android:text="Sign In"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/forgetpassword" />

                <TextView
                    android:visibility="invisible"
                    android:id="@+id/forgetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/forgotpassword"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/password" />


                <LinearLayout
                    android:visibility="invisible"
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/signin"
                    tools:layout_editor_absoluteX="16dp">

                    <ImageButton

                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@color/twitter"
                        android:src="@drawable/twitter" />

                    <ImageButton
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/dp_5"
                        android:layout_marginEnd="@dimen/dp_5"
                        android:layout_weight="1"
                        android:background="@color/facebookBtn"
                        android:src="@drawable/facebook" />

                    <ImageButton
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@color/linkedin"
                        android:src="@drawable/linkedin" />
                </LinearLayout>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/dont_have_account"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
                <TextView
                    android:visibility="gone"
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/signup"
                    android:textColor="@color/twitter"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:visibility="gone"
                    android:padding="@dimen/dp_5"
                    android:textColor="@color/white"
                    android:background="@color/facebookBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="skip"
                    android:text="skip"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signin" />


                <ImageView
                    android:id="@+id/logo2"
                    android:adjustViewBounds="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/saf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout" />
                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@+id/logo2"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/poweredby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>



</RelativeLayout>